--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-native-firebase/app": "^21.12.0",
     "@react-native-firebase/auth": "^21.12.0",
     "@react-native-firebase/firestore": "^21.12.0",
@@ -18,8 +19,11 @@
     "@react-native-picker/picker": "^2.11.0",
     "@react-navigation/native": "^7.0.15",
     "@react-navigation/stack": "^7.1.2",
+    "base-64": "^1.0.0",
+    "firebase": "^11.4.0",
     "react": "19.0.0",
     "react-native": "0.78.0",
+    "react-native-blob-util": "^0.21.2",
     "react-native-gesture-handler": "^2.24.0",
     "react-native-image-picker": "^8.2.0",
     "react-native-reanimated": "^3.17.1",
