--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "@react-navigation/bottom-tabs": "^7.2.1",
     "@react-navigation/native": "^7.0.15",
     "@react-navigation/stack": "^7.1.2",
+    "@stripe/stripe-react-native": "^0.43.0",
     "base-64": "^1.0.0",
     "firebase": "^11.4.0",
+    "firebase-functions": "^6.3.2",
     "react": "19.0.0",
     "react-native": "0.78.0",
     "react-native-blob-util": "^0.21.2",
@@ -30,7 +32,8 @@
     "react-native-reanimated": "^3.17.1",
     "react-native-safe-area-context": "^5.3.0",
     "react-native-screens": "^4.9.1",
-    "react-native-vector-icons": "^10.2.0"
+    "react-native-vector-icons": "^10.2.0",
+    "stripe": "^17.7.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
